WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244558
Regression(
r222993
) Code in addChildNodesToDeletionQueue() that checks that node has a refcount of 0 is now dead
https://bugs.webkit.org/show_bug.cgi?id=244558
Summary
Regression(r222993) Code in addChildNodesToDeletionQueue() that checks that n...
Chris Dumez
Reported
2022-08-30 15:25:09 PDT
Code that checks that node has a refcount of 0 is now dead after
r222993
. Node is protected now so its ref count couldn't possibly be 0.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-08-30 15:29:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3827
Chris Dumez
Comment 2
2022-08-31 11:29:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3865
EWS
Comment 3
2022-09-01 09:18:28 PDT
Committed
254044@main
(a6c5f820d22c): <
https://commits.webkit.org/254044@main
> Reviewed commits have been landed. Closing PR #3865 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2022-09-01 09:19:16 PDT
<
rdar://problem/99442828
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug