Regression(r222993) Code in addChildNodesToDeletionQueue() that checks that node has a refcount of 0 is now dead https://bugs.webkit.org/show_bug.cgi?id=244558

Reviewed by NOBODY (OOPS!).

Code in addChildNodesToDeletionQueue() that checks that node has a refcount of
0 is now dead after r222993. The node is protected now so its ref count
couldn't possibly be 0.

This patch reverts the changes made to addChildNodesToDeletionQueue() in
r222993 to address the issue. This would cause us to call
setTreeScopeRecursively() & notifyChildNodeRemoved() unnecessarily in many
cases.

* Source/WebCore/dom/ContainerNodeAlgorithms.cpp:
(WebCore::addChildNodesToDeletionQueue):